objects/HRBRefundStatus__c.object
<CustomObject>
    <fields>
        <fullName>AutoDecisionAt__c</fullName>
        <label>AutoDecisionAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompletedAt__c</fullName>
        <label>CompletedAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedAt__c</fullName>
        <label>CreatedAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HRB_Refund_Advance__c</fullName>
        <label>HRB Refund Advance</label>
        <referenceTo>HRB_Refund_Advance__c</referenceTo>
        <relationshipLabel>HRBRefundStatuses</relationshipLabel>
        <relationshipName>HRBRefundStatuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HTTPRequest__c</fullName>
        <description>Headers and Body of the HTTP POST Request Sent to HRB</description>
        <label>HTTPRequest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HTTPResponseBody__c</fullName>
        <label>HTTPResponseBody</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HTTPResponseCode__c</fullName>
        <description>Response Code from HTTP POST to HRB returning the decision information</description>
        <label>HTTPResponseCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HTTPResponseStatus__c</fullName>
        <label>HTTPResponseStatus</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManualDecisionAt__c</fullName>
        <label>ManualDecisionAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLAMinutes__c</fullName>
        <formula>60*24*(NULLVALUE(CompletedAt__c, Now())-CreatedAt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLAMinutes</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCompleted?</label>
        <type>Checkbox</type>
    </fields>
    <label>HRBRefundStatus</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HRBRefundStatus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HRBRefundStatuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>